# openstage

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: base-models.md  dataset.md  fields-codebook.md  getting-started.md  index.md  models-guide.md
docs/cases/eu/: adapter.md  intro.md  provenance.md  usage.md
docs/hooks/: field_labels.py
docs/scripts/: gen_case_pages.py
src/openstage/: __init__.py  collections.py  dataset.py
src/openstage/adapters/: __init__.py
src/openstage/adapters/eu/: __init__.py  procedures.py
src/openstage/models/: __init__.py  codebook.py  core.py  document.py  event.py  fields.py  procedure.py
src/openstage/models/eu/: __init__.py  document.py  event.py  procedure.py
tests/: __init__.py  conftest.py  test_adapters_eu.py  test_collections.py  test_dataset.py  test_eu_models.py  test_integration_eu.py  test_models.py
