[project]
name = "openstage"
version = "0.0.0"
description = "openstage data models, adapters, and dataset building blocks"
readme = "README.md" 
requires-python = ">=3.11"
authors = [
    {name = "Maximilian Haag"},
]


# Core: models, adapters, dataset reading
dependencies = [
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/openstage"]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "openbasement @ git+https://github.com/openstage-eu/openbasement.git",
    "rdflib>=7.5.0",
]
# Documentation
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-openstage-theme @ git+https://github.com/openstage-eu/mkdocs-openstage-theme.git",
    "mkdocstrings[python]>=0.27.0",
    "griffe-pydantic>=1.0.0",
    "mkdocs-mermaid2-plugin>=1.2.0",
    "mkdocs-gen-files>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/openstage-eu/openstage"
Repository = "https://github.com/openstage-eu/openstage"
Issues = "https://github.com/openstage-eu/openstage/issues"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true